# github-ci-slack

./: .gitignore  setup.cfg
.github/workflows/: pytest-coverage.yaml
envs/: environment-test.yaml
github_ci_slack/: __init__.py
tests/: test_github_ci_slack.py
