[metadata]
name = github-ci-slack
version = attr: github_ci_slack.__version__
description = Explore how to notify Slack of GitHub Actions CI success/failure
author = Doug Latornell
author_email = dlatornell@eoas.ubc.ca
url = https://github.com/douglatornell/github-ci-slack
long_description = file: README.rst
license = Apache License, Version 2.0
platform = Linux
classifiers =
    Development Status :: 1 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    ; see envs/environment-dev.yaml for conda environment dev installation
    ; see envs/requirements.txt for versions most recently used in development
